<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="650dp"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/DM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFondoDatosLP">

        <TextView
            android:id="@+id/tituloAcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff266e96"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/informacionAcercaDe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DM"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/desarrollo"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/informacionAcercaDe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/informacionAcercaDe1"
        android:layout_marginStart="35dp"
        android:text="@string/www"
        android:textColor="#0000FF"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/informacionAcercaDe3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/informacionAcercaDe2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/atencion"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/informacionAcercaDe4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/informacionAcercaDe3"
        android:layout_marginStart="35dp"
        android:text="@string/ntelefono"
        android:textColor="#0000FF"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/informacionAcercaDe5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/informacionAcercaDe4"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/sugerencias_dot"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/informacionAcercaDe6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/informacionAcercaDe5"
        android:layout_marginStart="35dp"
        android:text="@string/mail"
        android:textColor="#0000FF"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/informacionAcercaDe6"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="right"
        android:layout_marginEnd="50dp">

        <Button
            android:id="@+id/aceptarAcercaDe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@drawable/boton_ok"
            android:text="@string/aceptar_M"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSizeCircularButons"
            android:typeface="normal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</RelativeLayout>